<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tic Tac Toe</string>
    
    <!-- Main -->
    <string name="singleplayer">Single Player</string>
    <string name="multiplayer">2 Players</string>
    <string name="bluetooth">Bluetooth</string>
    
    <!-- Preferences -->
    <string name="action_settings">Settings</string>
    
    <string name="pref_language">Language</string>
    <string name="pref_language_summary">Choose your language</string>
    
    <string name="pref_username">Username</string>
    <string name="pref_username_summary">Provide your username here</string>
    <string name="default_username">Player 1</string>
    <string name="default_username_2">Player 2</string>
    
    <string name="pref_size">Size of the matrix</string>
    <string name="pref_size_summary">Choose the size</string>
    
    <string name="pref_difficulty">Difficulty</string>
    <string name="pref_difficulty_summary">Choose the difficulty</string>
    
    <string name="devs">Developing team</string>
    <string name="devs_summary">Yulianna Khorolich, Maksym Kulishev, Alexandre Pais Gomes, Jaweed Parwany</string>
    
    <!-- Game -->
    <string name="cpu_name">AI</string>
    <string name="draw">Draw!</string>
    <string name="player_win">won!</string>

</resources>