<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <ImageButton
        android:id="@+id/singleplayer_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/singleplayer"
        android:onClick="singlePlayer"
        android:src="@drawable/singleplayer" />

    <ImageButton
        android:id="@+id/multiplayer_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/multiplayer"
        android:src="@drawable/multiplayer" />

    <ImageButton
        android:id="@+id/bluetooth_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bluetooth"
        android:src="@drawable/bluetooth" />

</LinearLayout>